Como testar README.md
Coloquei o código para iniciar o software